Bug #208762.  Fix problems with Mozilla crashing or hanging on X servers with multiple visuals.  Make sure to use the same visual when creating windows as when we are drawing in the gfx code.