widget/src/gtk2/mozcontainer.c
@@ -221,6 +221,11 @@ moz_container_init (MozContainer *container)
     container->container.resize_mode = GTK_RESIZE_IMMEDIATE;
     gtk_widget_set_redraw_on_allocate(GTK_WIDGET(container),
                                       FALSE);
+
+    /* Mozilla uses the the gdbrgb colormap and visual throughout the
+       backend so for widgets we just use that colormap instead of the
+       default one. */
+    gtk_widget_set_colormap(GTK_WIDGET(container), gdk_rgb_get_colormap());
 }
 
 void
